Cabal-Version: 2.4
Name: uniswap
Version: 0.1.0.0
Author:              Amirhossein Khajehpour, Lars Bruenjes
Maintainer:          khajepour.amirhossein@gmail.com, lars.bruenjes@iohk.io
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

source-repository head
    type: git
    location: https://github.com/RadNi/uniswap-plutus 

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
                 -- See Plutus Tx readme
                 -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors



library
  hs-source-dirs:      src
  exposed-modules:     
      Uniswap
      Uniswap.OnChain
      Uniswap.Pool
      Uniswap.OffChain
      Uniswap.Types 
      Uniswap.Trace                       
                       
  build-depends:
      plutus-use-cases -any,
      base -any,
      aeson -any,
      bytestring -any,
      containers -any,
      data-default -any,
      freer-extras -any,
      mtl -any,
      plutus-core -any,
      plutus-tx -any,
      plutus-contract -any,
      playground-common -any,
      plutus-ledger -any,
      template-haskell -any,
      lens -any,
      text -any,
      prettyprinter -any,
      hashable -any,
      freer-simple -any,
      streaming -any,
      semigroups -any

  if !(impl(ghcjs) || os(ghcjs))
      build-depends: plutus-tx-plugin -any

  if flag(defer-plugin-errors)
      ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors 
 
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


executable uniswap-pab
    main-is:         uniswap-pab.hs
    other-modules:   Uniswap1
    hs-source-dirs:  app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wno-missing-import-lists -Wredundant-constraints -O0
    build-depends:
        base >=4.9 && <5,
        aeson -any,
        bytestring -any,
        containers -any,
        data-default -any,
        freer-extras -any,
        uniswap -any,
        freer-simple -any,
        plutus-contract -any,
        plutus-ledger -any,
        plutus-pab,
        plutus-use-cases -any,
        prettyprinter -any,
        text -any

executable uniswap-client
  main-is:             uniswap-client.hs
  other-modules:       Uniswap1
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , uniswap
                     , bytestring
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , plutus-use-cases
                     , prettyprinter
                     , req ^>= 3.9.0
                     , text
                     , uuid
